fixed colourex text not showing on safari

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -102,7 +102,6 @@ header {
         text-decoration: none;
         letter-spacing: 1.5px;
         color: $primaryTextColour;
-        display: block;
         line-height: 1.15em;
       }
     }
